--- a/contact.html
+++ b/contact.html
@@ -107,15 +107,14 @@
                 </a>
             </div>
         </div>
-        <hr>
         <footer>
-            <div class="work-experience">
+            <div class="half">
                 <p><strong>© Fritz Lamparas 2024</strong></p>
                 <p><strong>(0951) 074-0514</strong></p>
                 <p><strong>58 San Luis St. Villareal Brgy. Gulod, Novaliches, Quezon City, Philippines, 1117</strong></p>
             </div>
-            <div class="work-experience">
-                <p><strong>Hosted with: <a href="https://pages.github.com/"><i class="fa-brands fa-github fa-1x"></i>Github Pages</a></strong></p>
+            <div class="half">
+                <p><strong>Hosted with: <a href="https://pages.github.com/" target="_blank"><i class="fa-brands fa-github fa-1x"></i>Github Pages</a></strong></p>
             </div>
         </footer>
     <script src="scripts.js"></script>
