--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
             <div class="txt title">
                 Work Experience
             </div>
-            <div class="work-experience darker">
+            <div class="half darker">
                 <div class="job">
-                    <button class="dropdown-btn"><p>IT Department Leader</p><span>▼</span></button>
-                    <div class="dropdown-content des">
+                    <button class="ddown"><p>IT Department Leader</p><span>▼</span></button>
+                    <div class="ddownc des">
                         <p><strong>Company:</strong> ChrisImm Sentimo Kumon</p>
                         <p><strong>Location:</strong> Work from Home</p>
                         <p><strong>Nature of Work:</strong> On-The-Job Training</p>
@@ -78,8 +78,8 @@
                     </div>
                 </div>
                 <div class="job">
-                    <button class="dropdown-btn"><p>Customer Service Representative</p><span>▼</span></button>
-                    <div class="dropdown-content des">
+                    <button class="ddown"><p>Customer Service Representative</p><span>▼</span></button>
+                    <div class="ddownc des">
                         <p><strong>Company:</strong> Teleperformance</p>
                         <p><strong>Location:</strong> Vertis North, Quezon City</p>
                         <p><strong>Nature of Work:</strong> Full-Time</p>
@@ -92,8 +92,8 @@
                     </div>
                 </div>
                 <div class="job">
-                    <button class="dropdown-btn"><p>Marketing Department Intern</p><span>▼</span></button>
-                    <div class="dropdown-content des">
+                    <button class="ddown"><p>Marketing Department Intern</p><span>▼</span></button>
+                    <div class="ddownc des">
                         <p><strong>Company:</strong> Locale Food Groupe</p>
                         <p><strong>Location:</strong> New Manila, Quezon City</p>
                         <p><strong>Nature of Work:</strong> Work Immersion</p>
@@ -106,8 +106,8 @@
                     </div>
                 </div>
                 <div class="job">
-                    <button class="dropdown-btn"><p>Administrative Assistant</p><span>▼</span></button>
-                    <div class="dropdown-content des">
+                    <button class="ddown"><p>Administrative Assistant</p><span>▼</span></button>
+                    <div class="ddownc des">
                         <p><strong>Company:</strong> Office of Councilor Luis O. Asistio III</p>
                         <p><strong>Location:</strong> Caloocan City, Metro Manila</p>
                         <p><strong>Nature of Work:</strong> Special Program for Employment of Students</p>
@@ -137,10 +137,10 @@
             <div class="txt title">
                 Awards and Recognitions
             </div>
-            <div class="work-experience lighter">
+            <div class="half lighter">
                 <div class="job">
-                    <button class="dropdown-btn"><p>Collegiate Years</p><span>▼</span></button>
-                    <div class="dropdown-content des">
+                    <button class="ddown"><p>Collegiate Years</p><span>▼</span></button>
+                    <div class="ddownc des">
                         <ul class="responsibilities cert">
                             <li data-img="listers/1.jpg">Participated as an MC in the 5th Annual Software Engineering Day in Polytechnic University of the Philippines (2023)</li>
                             <li data-img="listers/2.jpg">President’s List – 4th Year Second Semester (S.Y. 2022-2023) </li>
@@ -151,8 +151,8 @@
                     </div>
                 </div>
                 <div class="job">
-                    <button class="dropdown-btn"><p>Other Academic Years</p><span>▼</span></button>
-                    <div class="dropdown-content des">
+                    <button class="ddown"><p>Other Academic Years</p><span>▼</span></button>
+                    <div class="ddownc des">
                         <ul class="responsibilities">
                             <li>With Honors in Overall Class (S.Y. 2017- 2018)</li>
                             <li>3rd Place - HEKASI Quiz Bee (2018) </li>
@@ -168,10 +168,10 @@
             <div class="txt title">
                 Seminars and Certifications
             </div>
-            <div class="work-experience darker">
+            <div class="half darker">
                 <div class="job">
-                    <button class="dropdown-btn"><p>2024</p><span>▼</span></button>
-                    <div class="dropdown-content des">
+                    <button class="ddown"><p>2024</p><span>▼</span></button>
+                    <div class="ddownc des">
                         <p><strong>Civil Service Commission</strong></p>
                         <ul class="responsibilities cert">
                             <li data-img="certifs2024/cse.jpg">Civil Service Exam Professional</li>
@@ -179,8 +179,8 @@
                     </div>
                 </div>
                 <div class="job">
-                    <button class="dropdown-btn"><p>2023</p><span>▼</span></button>
-                    <div class="dropdown-content des">
+                    <button class="ddown"><p>2023</p><span>▼</span></button>
+                    <div class="ddownc des">
                         <p><strong>MachIntellect: Unlocking the Synergy of Tech and Mind.</strong></p>
                         <ul class="responsibilities cert">
                             <li data-img="certifs/1.jpg">Computer Vision </li>
@@ -226,8 +226,8 @@
                     </div>
                 </div>
                 <div class="job">
-                    <button class="dropdown-btn"><p>2022</p><span>▼</span></button>
-                    <div class="dropdown-content des">
+                    <button class="ddown"><p>2022</p><span>▼</span></button>
+                    <div class="ddownc des">
                         <p><strong>Mindbank Training and Skills Corp.</strong></p>
                         <ul class="responsibilities">
                             <li>Contact Center Services NC II</li>
@@ -235,8 +235,8 @@
                     </div>
                 </div>
                 <div class="job">
-                    <button class="dropdown-btn"><p>2021</p><span>▼</span></button>
-                    <div class="dropdown-content des">
+                    <button class="ddown"><p>2021</p><span>▼</span></button>
+                    <div class="ddownc des">
                         <p><strong>Cognitive Class.ai</strong></p>
                         <ul class="responsibilities cert">
                             <li data-img="certifs2021/cca.jpg">Python 101 for Data Science</li>
@@ -326,15 +326,14 @@
             <div id="legrow">
             </div>
         </div>
-        <hr>
         <footer>
-            <div class="work-experience">
+            <div class="half">
                 <p><strong>© Fritz Lamparas 2024</strong></p>
                 <p><strong>(0951) 074-0514</strong></p>
                 <p><strong>58 San Luis St. Villareal Brgy. Gulod, Novaliches, Quezon City, Philippines, 1117</strong></p>
             </div>
-            <div class="work-experience">
-                <p><strong>Hosted with: <a href="https://pages.github.com/"><i class="fa-brands fa-github fa-1x"></i>Github Pages</a></strong></p>
+            <div class="half">
+                <p><strong>Hosted with: <a href="https://pages.github.com/" target="_blank"><i class="fa-brands fa-github fa-1x"></i>Github Pages</a></strong></p>
             </div>
         </footer>
     <script src="scripts.js"></script>
