--- a/contact.html
+++ b/contact.html
@@ -61,9 +61,11 @@
                 <a href="mailto:fritzlamparasofficial@gmail.com" target="_blank">   
                     <i class="fa-brands fa-google fa-2x"></i><span>Gmail</span></a>
                 <a href="tel:+639510744514"> 
-                    <i class="fa-solid fa-phone fa-2x"></i><span>+639510744514</span></a>
+                    <i class="fa-solid fa-phone-square fa-2x"></i><span>+639510744514</span></a>
                 <a href="https://www.linkedin.com/in/fritz-lamparas-418b57219/" target="_blank">   
                     <i class="fa-brands fa-linkedin fa-2x"></i><span>LinkedIn</span></a>
+                <a href="viber://chat?number=09510744514" target="_blank">   
+                    <i class="fa-brands fa-viber fa-2x"></i><span>Viber</span></a>    
                 <a href="https://www.instagram.com/fritzlamparas/" target="_blank">   
                     <i class="fa-brands fa-instagram fa-2x"></i><span>Instagram</span></a>          
                 <a href="https://teams.microsoft.com/l/chat/0/0?users=fdlamparas@iskolarngbayan.pup.edu.ph" target="_blank">   
@@ -81,29 +83,29 @@
                 Character Reference
             </div>
             <div class="coninf">
-                <a class="darker des flexcol" href="tel:+639510744514">
+                <a class="darker des flexcol" href="tel:+639947670496">
                     <strong>TL Aljohn Tolentino</strong>
                     <br>
                     <p>Team Leader</p>
                     <p>Best Buy Primary Support Voice</p>
                     <p>Teleperformance, Vertis North, Quezon City</p>
-                    <p>09947670496</p>
+                    <p><i class="fa-solid fa-phone fa-1x"></i>09947670496</p>
                 </a>
-                <a class="darker des flexcol" href="tel:+639510744514">
+                <a class="darker des flexcol" href="tel:+639512302931">
                     <strong>Mr. Vergel Villegas</strong>
                     <br>
                     <p>Subject Matter Expert</p>
                     <p>Best Buy Primary Support Voice</p>
                     <p>Teleperformance, Vertis North, Quezon City</p>
-                    <p>09512302931</p>
+                    <p><i class="fa-solid fa-phone fa-1x"></i>09512302931</p>
                 </a>
-                <a class="darker des flexcol" href="tel:+639510744514">
+                <a class="darker des flexcol" href="tel:+63978509668">
                     <strong>Engr. Orland D. Tubola</strong>
                     <br>
                     <p>Director</p>
                     <p>Research Institute for Strategic Foresight and Innovation</p>
                     <p>Polytechnic University of the Philippines, Sta. Mesa, Manila </p>
-                    <p>09778509668</p>
+                    <p><i class="fa-solid fa-phone fa-1x"></i>09778509668</p>
                 </a>
             </div>
         </div>
